Selection API: collapseToStart() and collapseToEnd() should work for text fields.

BUG=716725

Review-Url: https://codereview.chromium.org/2869703004
Cr-Commit-Position: refs/heads/master@{#470824}

Former-commit-id: 053f34e3a33c62ff262483e92223971aae60de9d